--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.lang - Reactor Dependency Convergence</title>
+    <title>org.openwms.core.search - Reactor Dependency Convergence</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.lang
+                org.openwms.core.search
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.lang">org.openwms.core.lang</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
               
                     
       </div>
@@ -157,6 +157,7 @@
 <ol style="list-style-type: decimal">
 <li></li><br />
 <li></li><br />
+<li></li><br />
 <li></li><br /></ol></td></tr>
 <tr class="a">
 <td width="25%">1.7-SNAPSHOT</td>
@@ -164,6 +165,7 @@
 <ol style="list-style-type: decimal">
 <li>org.openwms:org.openwms.core.configuration:jar:1.1.0-SNAPSHOT<br />+-&#160;org.openwms:org.openwms.core.util:jar:1.1.0-SNAPSHOT:compile<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile - omitted for conflict with 1.7-20160817.070303-10)<br />+-&#160;org.openwms:org.openwms.core.test:test-jar:tests:1.1.0-SNAPSHOT:test<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:test - omitted for duplicate)<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br />
 <li>org.openwms:org.openwms.core.lang:jar:1.1.0-SNAPSHOT<br />+-&#160;org.openwms:org.openwms.core.util:jar:1.1.0-SNAPSHOT:compile<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile - omitted for conflict with 1.7-20160817.070303-10)<br />+-&#160;org.openwms:org.openwms.core.test:test-jar:tests:1.1.0-SNAPSHOT:test<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:test - omitted for duplicate)<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br />
+<li>org.openwms:org.openwms.core.search:jar:1.1.0-SNAPSHOT<br />+-&#160;org.openwms:org.openwms.core.util:jar:1.1.0-SNAPSHOT:compile<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile - omitted for conflict with 1.7-20160817.070303-10)<br />+-&#160;org.openwms:org.openwms.core.test:test-jar:tests:1.1.0-SNAPSHOT:test<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:test - omitted for duplicate)<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br />
 <li>org.openwms:org.openwms.core.util:jar:1.1.0-SNAPSHOT<br />+-&#160;org.openwms:org.openwms.core.test:test-jar:tests:1.1.0-SNAPSHOT:test<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:test - omitted for conflict with 1.7-20160817.070303-10)<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>org.apache.commons:commons-lang3<a name="org.apache.commons:commons-lang3"></a></h4>
