--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.lang - About</title>
+    <title>org.openwms.core.search - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.lang
+                org.openwms.core.search
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.lang">org.openwms.core.lang</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
               
                     
       </div>
@@ -111,8 +111,8 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About org.openwms.core.lang<a name="About_org.openwms.core.lang"></a></h2><a name="About_org.openwms.core.lang"></a>
-<p>OpenWMS.org :: CORE :: Internationalisation and Localisation services</p></div>
+<h2>About org.openwms.core.search<a name="About_org.openwms.core.search"></a></h2><a name="About_org.openwms.core.search"></a>
+<p>Spring implementation of the service layer.</p></div>
       </div>
     </div>
     <div class="clear">
