--- a/plugins.html
+++ b/plugins.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.lang - Project Plugins</title>
+    <title>org.openwms.core.search - Project Plugins</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.lang
+                org.openwms.core.search
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.lang">org.openwms.core.lang</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
               
                     
       </div>
@@ -164,11 +164,7 @@
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/surefire/maven-surefire-plugin">maven-surefire-plugin</a></td>
-<td>2.16</td></tr>
-<tr class="b">
-<td>org.springframework.boot</td>
-<td><a class="externalLink" href="http://projects.spring.io/spring-boot/">spring-boot-maven-plugin</a></td>
-<td>1.4.0.RELEASE</td></tr></table></div>
+<td>2.16</td></tr></table></div>
 <div class="section">
 <h2>Project Report Plugins<a name="Project_Report_Plugins"></a></h2><a name="Project_Report_Plugins"></a>
 <p>There are no plugins reports defined in the Reporting part of this project.</p></div>
