--- a/project-info.html
+++ b/project-info.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.lang - Project Information</title>
+    <title>org.openwms.core.search - Project Information</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.lang
+                org.openwms.core.search
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.lang">org.openwms.core.lang</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
               
                     
       </div>
@@ -139,7 +139,7 @@
 <td>This document provides informations on the distribution management of this project.</td></tr>
 <tr class="b">
 <td><a href="index.html">About</a></td>
-<td>OpenWMS.org :: CORE :: Internationalisation and Localisation services</td></tr>
+<td>Spring implementation of the service layer.</td></tr>
 <tr class="a">
 <td><a href="issue-tracking.html">Issue Management</a></td>
 <td>This document provides information on the issue management system used in this project.</td></tr>
