--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.lang - Project Summary</title>
+    <title>org.openwms.core.search - Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.lang
+                org.openwms.core.search
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.lang">org.openwms.core.lang</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
               
                     
       </div>
@@ -120,13 +120,13 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>Name</td>
-<td>org.openwms.core.lang</td></tr>
+<td>org.openwms.core.search</td></tr>
 <tr class="a">
 <td>Description</td>
-<td>OpenWMS.org :: CORE :: Internationalisation and Localisation services</td></tr>
+<td>Spring implementation of the service layer.</td></tr>
 <tr class="b">
 <td>Homepage</td>
-<td><a class="externalLink" href="http://www.openwms.org/org.openwms.core/org.openwms.core.lang">http://www.openwms.org/org.openwms.core/org.openwms.core.lang</a></td></tr></table></div>
+<td><a class="externalLink" href="http://www.openwms.org/org.openwms.core/org.openwms.core.search">http://www.openwms.org/org.openwms.core/org.openwms.core.search</a></td></tr></table></div>
 <div class="section">
 <h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
 <table border="0" class="bodyTable">
@@ -150,7 +150,7 @@
 <td>org.openwms</td></tr>
 <tr class="a">
 <td>ArtifactId</td>
-<td>org.openwms.core.lang</td></tr>
+<td>org.openwms.core.search</td></tr>
 <tr class="b">
 <td>Version</td>
 <td>1.1.0-SNAPSHOT</td></tr>
