--- a/project-info.html
+++ b/project-info.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.uaa - Project Information</title>
+    <title>OpenWMS.org COMMON - Project Information</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.uaa
+                OpenWMS.org COMMON
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.uaa">org.openwms.core.uaa</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
               
                     
       </div>
@@ -45,12 +45,24 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
+            </li>
+          </ul>
+                       <h5>Modules</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="org.openwms.common.comm/index.html" title="org.openwms.common.comm">org.openwms.common.comm</a>
+            </li>
+                  <li class="none">
+                          <a href="org.openwms.common.service/index.html" title="org.openwms.common.service">org.openwms.common.service</a>
+            </li>
+                  <li class="none">
+                          <a href="org.openwms.common.shared/index.html" title="org.openwms.common.shared">org.openwms.common.shared</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                    <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                                      <li class="expanded">
             <strong>Project Information</strong>
                   <ul>
                       <li class="none">
@@ -82,6 +94,9 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
+            </li>
+                      <li class="none">
+                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -139,7 +154,7 @@
 <td>This document provides informations on the distribution management of this project.</td></tr>
 <tr class="b">
 <td><a href="index.html">About</a></td>
-<td>OpenWMS.org :: CORE :: User Authentication and Administration</td></tr>
+<td>OpenWMS.org is an open source warehouse management software</td></tr>
 <tr class="a">
 <td><a href="issue-tracking.html">Issue Management</a></td>
 <td>This document provides information on the issue management system used in this project.</td></tr>
@@ -150,18 +165,21 @@
 <td><a href="mail-lists.html">Mailing Lists</a></td>
 <td>This document provides subscription and archive information for this project's mailing lists.</td></tr>
 <tr class="b">
+<td><a href="modules.html">Project Modules</a></td>
+<td>This document lists the modules (sub-projects) of this project.</td></tr>
+<tr class="a">
 <td><a href="plugin-management.html">Plugin Management</a></td>
 <td>This document lists the plugins that are defined through pluginManagement.</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="plugins.html">Plugins</a></td>
 <td>This document lists the build plugins and the report plugins used by this project.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="team-list.html">Team</a></td>
 <td>This document provides information on the members of this project. These are the individuals who have contributed to the project in one form or another.</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="source-repository.html">Source Code Management</a></td>
 <td>This document lists ways to access the online source repository.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="project-summary.html">Summary</a></td>
 <td>This document lists other related information of this project</td></tr></table></div></div>
       </div>
